{
    "version": 1,
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "d45160aa-5879-4cf2-ab09-1593a7b16257",
            "actions": [
                {
                    "name": "MovementInput",
                    "type": "Value",
                    "id": "8d9bf39d-ea40-4536-9e62-438a611e49f0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JumpInput",
                    "type": "Button",
                    "id": "4dd2a3f7-bcd0-4c97-953d-6e1ed842f82e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EscapeInput",
                    "type": "Button",
                    "id": "d7b429f7-ae66-4469-8242-e2ea907a7845",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MapInput",
                    "type": "Button",
                    "id": "f4bed590-3dcb-47bb-993e-a3a51ba4826e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InventoryInput",
                    "type": "Button",
                    "id": "7fef074b-c568-46e0-962c-299eefde248e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractionInput",
                    "type": "Button",
                    "id": "1031de15-aa32-4e8b-bb3d-f090030912c5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DashInput",
                    "type": "Button",
                    "id": "9e459736-6357-4cef-b630-25a5092d2f93",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BasicAttackInput",
                    "type": "Value",
                    "id": "434ac95f-5f25-4fe0-83a5-1847627f0899",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpecialAttackInput",
                    "type": "Value",
                    "id": "f4368be6-1a35-4c01-8789-8e28a85ce455",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "4b7c2012-e2bd-4395-bad3-aad5d917a8f9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e9937070-3e1c-4f78-b554-36cee2bd38d4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6af555a7-95d3-43f7-8b48-49cfa6000253",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0e6c042e-782d-46ce-ae99-f1098286d1b2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ea62e294-694c-4d08-b620-49775208d9eb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3f4ab6b4-9917-476a-9bfb-395c212be357",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64dc8625-3dd1-4b06-b6fd-23335d4cef94",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EscapeInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fd9ff74-56ae-457e-9be8-9ae0fcfe1342",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InventoryInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbfd5d65-6088-4478-8bec-bd08d8ca9d98",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractionInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fee3368-24a2-423c-8063-ebbe372bb364",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a42c2a41-5a85-4392-b98c-23801b427747",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecialAttackInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61da5fda-b780-44a5-9afb-868e0999edd4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e567fbf-3e35-4b75-8886-0db0346c8e74",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicAttackInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}